--- a/index.html
+++ b/index.html
@@ -215,7 +215,14 @@
        </section>
 
        <section class="section-stories">
-         
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop >
+                <source src="/img/video.mp4" type="video/mp4">
+                <source src="/img/video.webm" type="video/webm">
+                Your browser is not supported
+            </video>
+        </div> 
+
              <div class="u-center-text u-margin-bottom-big">
                <h2 class="heading-secondary">
                   We make people genuinely happy
@@ -235,6 +242,27 @@
                     </div>
                 </div>
              </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="/img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            My perception is compeletely different now</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam ab rem nisi. Voluptas ducimus aut
+                            quibusdam id dolore quae nulla possimus voluptatibus alias, quas sed ipsum molestiae nobis rem minima
+                            ducimus aut quibusdam id dolore quae nulla possimus voluptatibus alias, quas sed ipsum molestiae nobis
+                            rem minima.</p>
+                    </div>
+                </div>
+            </div> 
+
+            <div class="u-center-text u-margin-huge-big">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
 
 
        </section>
